[project]
name = "ark-trust"
version = "0.5.0.dev0"
description = "ARK - Agent Reliability Kit. Trust infrastructure for AI agents."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ARK Contributors"}]
keywords = ["ai", "agent", "reliability", "trust", "guard", "circuit-breaker", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.28",
    "structlog>=23.0",
]
[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
