[project]
name = "ark-trust"
version = "0.7.0"
description = "ARK - Agent Reliability Kit: Idempotency Guard, Circuit Breaker, Output Validator, and OpenTelemetry Tracing for AI Agents. Trust infrastructure for LLM agents."
keywords = ["ai", "agent", "llm", "trust", "reliability", "idempotency", "circuit-breaker", "opentelemetry", "langchain", "crewai", "validation", "tracing"]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ARK Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/wzg0911/ark"
Repository = "https://github.com/wzg0911/ark"
"Issue Tracker" = "https://github.com/wzg0911/ark/issues"
Documentation = "https://github.com/wzg0911/ark#readme"
"ARK Pro" = "https://ark-6ek.pages.dev/pro"

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.28",
    "structlog>=23.0",
]
[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
